css/style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");

:root {
  --ff-primary: Roboto;

  --clr-primary: #1f2937;
  --clr-secondary: #f9faf8;
  --clr-tertiary: #e5e7eb;
  --clr-quartenary: #3882f6;

  --fs-small: 18px;
  --fs-medium: 24px;
  --fs-large: 36px;
  --fs-xlarge: 48px;

  --fw-light: 300;
  --fw-bolder: 900;

  --bg-primary: var(--clr-primary);
  --bg-secondary: var(--clr-tertiary);
  --bg-btn: var(--clr-quartenary);

  --clr-txt-primary: var(--clr-secondary);
  --clr-txt-secondary: var(--clr-tertiary);
  --clr-txt-tertiary: var(--clr-primary);
}

/* Use a more-intuitive box-sizing model */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin */
* {
  margin: 0;
}

/* Enable keyword animations */
@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  -webkit-font-smoothing: antialiased;
}

/* Improve media defaults */
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

/* Inherit fonts for form controls */
input,
button,
textarea,
select {
  font: inherit;
}

/* Avoid text overflows */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

/*
  Create a root stacking context
*/
#root,
#__next {
  isolation: isolate;
}

/* Classes */

.center {
  margin: 0 auto;
  max-width: 1000px;
}

/* General styles */

* {
  font-family: var(--ff-primary);
}

li {
  list-style-type: none;
}

a {
  text-decoration: none;
  color: inherit;
}

.header,
footer {
  display: flex;
  background-color: var(--bg-primary);
}

.btn-cta {
  background-color: var(--bg-btn);
  color: var(--clr-txt-primary);
  outline: 0;
  border: 0;
  border-radius: 5px;
  padding: 0.25rem 1.5rem;
}

/*  Header  */

.navbar {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  padding: 1rem 0;
}

.navbar > ul {
  display: flex;
  gap: 1.5rem;
}

.navbar li {
  color: var(--clr-txt-primary);
}

.logo {
  font-size: var(--fs-medium);
  color: var(--clr-txt-primary);
}

/* Hero section */

#hero {
  display: flex;
  gap: 4.5rem;
  margin: 6rem 0;
}

#hero div {
  flex: 1;
}

.hero-content h1 {
  font-size: var(--fs-xlarge);
  color: var(--clr-txt-primary);
}

.hero-content p {
  font-size: var(--fs-small);
  color: var(--clr-txt-primary);
  margin-bottom: 0.5rem;
}

/* Main section */

.main-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 2rem 0 4rem 0;
}

.main-heading {
  color: var(--clr-txt-tertiary);
  font-size: var(--fs-large);
  font-weight: var(--fw-bolder);
}

.card-container {
  display: flex;
  justify-content: center;
  gap: 3rem;
  margin: 2rem 0;
}

.card {
  flex: 0 1 150px;
  border-radius: 5px;
}

.card img {
  border: 3px var(--clr-quartenary) solid;
  border-radius: 15px;
}

.card p {
  padding: 0.5rem 0;
  color: var(--clr-txt-tertiary);
  text-align: center;
}

/* Quote section */
.quote {
  background-color: var(--bg-secondary);
  color: var(--clr-txt-tertiary);
}

.quote-content {
  padding: 4rem 0;
}

